2025-12-16  Oliver Kiddle  <opk@zsh.org>

	* Christopher Bock: 54148: Completion/Debian/Command/_apt:
	use same set of options for apt as with apt-get

	* Aidan Van Duyne: 54143: Src/Zle/zle_bindings.c,
	Doc/Zsh/zle.yo: Bind '_' to vi-first-non-blank in vicmd keymap

	* 54147: Src/Zle/termquery.c: avoid buffer overflow with
	terminal sequences

2025-11-30  Oliver Kiddle  <opk@zsh.org>

	* Christopher Bock: 54117: update apt completion

	* 54119: Src/Zle/termquery.c: fix OSC52 clipboard get with
	empty clipboard

2025-11-27  Oliver Kiddle  <opk@zsh.org>

	* unposted (c.f. Bart: 54112): Src/params.c: remove Unicode

2025-11-24  Oliver Kiddle  <opk@zsh.org>

	* Philippe: 54093 (tweaked per 54101): Src/Modules/db_gdbm.c,
	Src/Modules/mapfile.c, Src/Modules/parameter.c,
	Src/Modules/zutil.c, Src/Zle/complete.c, Src/Zle/zle_main.c,
	Src/Zle/zle_params.c, Src/builtin.c, Src/glob.c, Src/params.c,
	Src/subst.c, Src/zsh.h: Cleanup isarr fields and variables

	* 54104: Src/parse.c, Src/zsh.h: fix bug with packing strings
	into wordcode

	* 54103: Src/builtin.c, Src/parse.c, Test/C02cond.ztst:
	support > and < comparisons via the test builtin

	* 54094: Completion/Unix/Command/_base64,
	Completion/Unix/Command/_basename, Completion/Unix/Command/_cat,
	Completion/Unix/Command/_chmod, Completion/Unix/Command/_chown,
	Completion/Unix/Command/_chroot, Completion/Unix/Command/_cksum,
	Completion/Unix/Command/_comm, Completion/Unix/Command/_cp,
	Completion/Unix/Command/_csplit, Completion/Unix/Command/_cut,
	Completion/Unix/Command/_date, Completion/Unix/Command/_dd,
	Completion/Unix/Command/_df, Completion/Unix/Command/_du,
	Completion/Unix/Command/_env, Completion/Unix/Command/_fmt,
	Completion/Unix/Command/_fold, Completion/Unix/Command/_head,
	Completion/Unix/Command/_id, Completion/Unix/Command/_install,
	Completion/Unix/Command/_join, Completion/Unix/Command/_ln,
	Completion/Unix/Command/_ls, Completion/Unix/Command/_mkdir,